pdf ready for subreg

--- a/Notebook (based on the stanfordacm script)/contents.tex
+++ b/Notebook (based on the stanfordacm script)/contents.tex
@@ -1,429 +1,33 @@
-\section{Binary Search and Ternary Search}
-\subsection{LowerBound}
-\raggedbottom\lstinputlisting[style=cpp]{code/LowerBound.cpp}
-\hrulefill
-\subsection{Aplications}
-\raggedbottom\lstinputlisting[style=cpp]{code/Aplications.cpp}
-\hrulefill
-\subsection{TS}
-\raggedbottom\lstinputlisting[style=cpp]{code/TS.cpp}
-\hrulefill
-\subsection{UpperBound}
-\raggedbottom\lstinputlisting[style=cpp]{code/UpperBound.cpp}
-\hrulefill
-\subsection{parallel binary search}
-\raggedbottom\lstinputlisting[style=cpp]{code/parallel_binary_search.cpp}
-\hrulefill
-\subsection{STL}
-\raggedbottom\lstinputlisting[style=cpp]{code/STL.cpp}
-\hrulefill
-\subsection{BS}
-\raggedbottom\lstinputlisting[style=cpp]{code/BS.cpp}
-\hrulefill
-
-\section{Miscellaneous}
-\subsection{meetinthemiddle}
-\raggedbottom\lstinputlisting[style=cpp]{code/meetinthemiddle.cpp}
-\hrulefill
-\subsection{bitmasks}
-\raggedbottom\lstinputlisting[style=cpp]{code/bitmasks.cpp}
-\hrulefill
-\subsection{coordinate compression}
-\raggedbottom\lstinputlisting[style=cpp]{code/coordinate_compression.cpp}
-\hrulefill
-\subsection{tower of hanoi}
-\raggedbottom\lstinputlisting[style=cpp]{code/tower_of_hanoi.cpp}
-\hrulefill
-\subsection{two pointers}
-\raggedbottom\lstinputlisting[style=cpp]{code/two_pointers.cpp}
-\hrulefill
-\subsection{prefix sum 2d}
-\raggedbottom\lstinputlisting[style=cpp]{code/prefix_sum_2d.cpp}
-\hrulefill
-\subsection{inversion count}
-\raggedbottom\lstinputlisting[style=cpp]{code/inversion_count.cpp}
-\hrulefill
-\subsection{sprague grundy}
-\raggedbottom\lstinputlisting[style=cpp]{code/sprague_grundy.cpp}
-\hrulefill
-\subsection{stack trick}
-\raggedbottom\lstinputlisting[style=cpp]{code/stack_trick.cpp}
-\hrulefill
-\subsection{segment covering}
-\raggedbottom\lstinputlisting[style=cpp]{code/segment_covering.cpp}
-\hrulefill
-
-\section{STL}
-\subsection{ordered set}
-\raggedbottom\lstinputlisting[style=cpp]{code/ordered_set.cpp}
-\hrulefill
-\subsection{STL}
-\raggedbottom\lstinputlisting[style=txt]{code/STL.txt}
-\hrulefill
-
-\section{Utils}
-\subsection{runner2}
-\raggedbottom\lstinputlisting[style=py]{code/runner2.py}
-\hrulefill
-\subsection{rand}
-\raggedbottom\lstinputlisting[style=cpp]{code/rand.cpp}
-\hrulefill
-\subsection{  int128}
-\raggedbottom\lstinputlisting[style=cpp]{code/__int128.cpp}
-\hrulefill
-\subsection{execution time}
-\raggedbottom\lstinputlisting[style=cpp]{code/execution_time.cpp}
-\hrulefill
-\subsection{runner}
-\raggedbottom\lstinputlisting[style=py]{code/runner.py}
-\hrulefill
-
-\section{Math}
-\subsection{totient}
-\raggedbottom\lstinputlisting[style=cpp]{code/totient.cpp}
-\hrulefill
-\subsection{iterative fft}
-\raggedbottom\lstinputlisting[style=cpp]{code/iterative_fft.cpp}
-\hrulefill
-\subsection{extended euclidean}
-\raggedbottom\lstinputlisting[style=cpp]{code/extended_euclidean.cpp}
-\hrulefill
-\subsection{max xor subsequence}
-\raggedbottom\lstinputlisting[style=cpp]{code/max_xor_subsequence.cpp}
-\hrulefill
-\subsection{fraction}
-\raggedbottom\lstinputlisting[style=cpp]{code/fraction.cpp}
-\hrulefill
-\subsection{catalan}
-\raggedbottom\lstinputlisting[style=cpp]{code/catalan.cpp}
-\hrulefill
-\subsection{gaussian elimination2}
-\raggedbottom\lstinputlisting[style=cpp]{code/gaussian_elimination2.cpp}
-\hrulefill
-\subsection{modular arithmetic}
-\raggedbottom\lstinputlisting[style=cpp]{code/modular_arithmetic.cpp}
-\hrulefill
-\subsection{crivo}
-\raggedbottom\lstinputlisting[style=cpp]{code/crivo.cpp}
-\hrulefill
-\subsection{divisors}
-\raggedbottom\lstinputlisting[style=cpp]{code/divisors.cpp}
-\hrulefill
-\subsection{gaussian elimination}
-\raggedbottom\lstinputlisting[style=cpp]{code/gaussian_elimination.cpp}
-\hrulefill
-\subsection{primefactors2}
-\raggedbottom\lstinputlisting[style=cpp]{code/primefactors2.cpp}
-\hrulefill
-\subsection{matrix exponentiation2}
-\raggedbottom\lstinputlisting[style=cpp]{code/matrix_exponentiation2.cpp}
-\hrulefill
-\subsection{mobius2}
-\raggedbottom\lstinputlisting[style=cpp]{code/mobius2.cpp}
-\hrulefill
-\subsection{segmentedsieve}
-\raggedbottom\lstinputlisting[style=cpp]{code/segmentedsieve.cpp}
-\hrulefill
-\subsection{pollard rho}
-\raggedbottom\lstinputlisting[style=cpp]{code/pollard_rho.cpp}
-\hrulefill
-\subsection{xor trie}
-\raggedbottom\lstinputlisting[style=cpp]{code/xor_trie.cpp}
-\hrulefill
-\subsection{mobius}
-\raggedbottom\lstinputlisting[style=cpp]{code/mobius.cpp}
-\hrulefill
-\subsection{berlekamp massey}
-\raggedbottom\lstinputlisting[style=cpp]{code/berlekamp_massey.cpp}
-\hrulefill
-\subsection{fft}
-\raggedbottom\lstinputlisting[style=cpp]{code/fft.cpp}
-\hrulefill
-\subsection{lagrange}
-\raggedbottom\lstinputlisting[style=cpp]{code/lagrange.cpp}
-\hrulefill
-\subsection{primefactors}
-\raggedbottom\lstinputlisting[style=cpp]{code/primefactors.cpp}
-\hrulefill
-\subsection{fwht}
-\raggedbottom\lstinputlisting[style=cpp]{code/fwht.cpp}
-\hrulefill
-\subsection{operadores binarios}
-\raggedbottom\lstinputlisting[style=cpp]{code/operadores_binarios.cpp}
-\hrulefill
-\subsection{baby step gigant step}
-\raggedbottom\lstinputlisting[style=cpp]{code/baby_step_gigant_step.cpp}
-\hrulefill
-\subsection{simplex}
-\raggedbottom\lstinputlisting[style=cpp]{code/simplex.cpp}
-\hrulefill
-\subsection{matrix inverse and determinant}
-\raggedbottom\lstinputlisting[style=cpp]{code/matrix_inverse_and_determinant.cpp}
-\hrulefill
-\subsection{stars and bars}
-\raggedbottom\lstinputlisting[style=cpp]{code/stars_and_bars.cpp}
-\hrulefill
-\subsection{matrix exponentiation}
-\raggedbottom\lstinputlisting[style=cpp]{code/matrix_exponentiation.cpp}
-\hrulefill
-\subsection{binomial theorem}
-\raggedbottom\lstinputlisting[style=cpp]{code/binomial_theorem.cpp}
-\hrulefill
-\subsection{diophantine}
-\raggedbottom\lstinputlisting[style=cpp]{code/diophantine.cpp}
-\hrulefill
-\subsection{crt}
-\raggedbottom\lstinputlisting[style=cpp]{code/crt.cpp}
-\hrulefill
-\subsection{ntt}
-\raggedbottom\lstinputlisting[style=cpp]{code/ntt.cpp}
-\hrulefill
-
-\section{Dynamic programming and common problems}
-\subsection{cht}
-\raggedbottom\lstinputlisting[style=cpp]{code/cht.cpp}
-\hrulefill
-\subsection{subset sum}
-\raggedbottom\lstinputlisting[style=cpp]{code/subset_sum.cpp}
-\hrulefill
-\subsection{subsequences string}
-\raggedbottom\lstinputlisting[style=cpp]{code/subsequences_string.cpp}
-\hrulefill
-\subsection{sos dp}
-\raggedbottom\lstinputlisting[style=cpp]{code/sos_dp.cpp}
-\hrulefill
-\subsection{aliens trick}
-\raggedbottom\lstinputlisting[style=cpp]{code/aliens_trick.cpp}
-\hrulefill
-\subsection{largest square}
-\raggedbottom\lstinputlisting[style=cpp]{code/largest_square.cpp}
-\hrulefill
-\subsection{broken profile}
-\raggedbottom\lstinputlisting[style=cpp]{code/broken_profile.cpp}
-\hrulefill
-\subsection{bitwise digit dp}
-\raggedbottom\lstinputlisting[style=cpp]{code/bitwise_digit_dp.cpp}
-\hrulefill
-\subsection{exchange arguments}
-\raggedbottom\lstinputlisting[style=cpp]{code/exchange_arguments.cpp}
-\hrulefill
-\subsection{max matrix path}
-\raggedbottom\lstinputlisting[style=cpp]{code/max_matrix_path.cpp}
-\hrulefill
-\subsection{dynamic cht}
-\raggedbottom\lstinputlisting[style=cpp]{code/dynamic_cht.cpp}
-\hrulefill
-\subsection{lis}
-\raggedbottom\lstinputlisting[style=cpp]{code/lis.cpp}
-\hrulefill
-\subsection{Knapsack}
-\raggedbottom\lstinputlisting[style=cpp]{code/Knapsack.cpp}
-\hrulefill
-\subsection{tip}
-\raggedbottom\lstinputlisting[style=cpp]{code/tip.cpp}
-\hrulefill
-\subsection{largest-sum-contiguous-subarray}
-\raggedbottom\lstinputlisting[style=cpp]{code/largest-sum-contiguous-subarray.cpp}
-\hrulefill
-\subsection{lcs}
-\raggedbottom\lstinputlisting[style=cpp]{code/lcs.cpp}
-\hrulefill
-\subsection{divideandconquer}
-\raggedbottom\lstinputlisting[style=cpp]{code/divideandconquer.cpp}
-\hrulefill
-\subsection{expected value}
-\raggedbottom\lstinputlisting[style=cpp]{code/expected_value.cpp}
-\hrulefill
-\subsection{lichao}
-\raggedbottom\lstinputlisting[style=cpp]{code/lichao.cpp}
-\hrulefill
-\subsection{Digitdp}
-\raggedbottom\lstinputlisting[style=cpp]{code/Digitdp.cpp}
-\hrulefill
-
-\section{Theorems and Formulas}
-\subsection{chicken mcnugget}
-\raggedbottom\lstinputlisting[style=txt]{code/chicken_mcnugget.md}
-\hrulefill
-\subsection{graph notes}
-\raggedbottom\lstinputlisting[style=txt]{code/graph_notes.md}
-\hrulefill
-\subsection{binomial theorem}
-\raggedbottom\lstinputlisting[style=txt]{code/binomial_theorem.md}
-\hrulefill
-
-\section{Graph}
-\subsection{centroid decomposition2}
-\raggedbottom\lstinputlisting[style=cpp]{code/centroid_decomposition2.cpp}
-\hrulefill
-\subsection{Floyd Warshall}
-\raggedbottom\lstinputlisting[style=cpp]{code/Floyd_Warshall.cpp}
-\hrulefill
-\subsection{strong orientation}
-\raggedbottom\lstinputlisting[style=cpp]{code/strong_orientation.cpp}
-\hrulefill
-\subsection{scc}
-\raggedbottom\lstinputlisting[style=cpp]{code/scc.cpp}
-\hrulefill
-\subsection{hld}
-\raggedbottom\lstinputlisting[style=cpp]{code/hld.cpp}
-\hrulefill
-\subsection{Prim}
-\raggedbottom\lstinputlisting[style=cpp]{code/Prim.cpp}
-\hrulefill
-\subsection{articulation points}
-\raggedbottom\lstinputlisting[style=cpp]{code/articulation_points.cpp}
-\hrulefill
-\subsection{flow with minimum capacities}
-\raggedbottom\lstinputlisting[style=cpp]{code/flow_with_minimum_capacities.cpp}
-\hrulefill
-\subsection{tree isomorfism}
-\raggedbottom\lstinputlisting[style=cpp]{code/tree_isomorfism.cpp}
-\hrulefill
-\subsection{mincostflow}
-\raggedbottom\lstinputlisting[style=cpp]{code/mincostflow.cpp}
-\hrulefill
-\subsection{eulertour}
-\raggedbottom\lstinputlisting[style=cpp]{code/eulertour.cpp}
-\hrulefill
-\subsection{TreeDiameter}
-\raggedbottom\lstinputlisting[style=cpp]{code/TreeDiameter.cpp}
-\hrulefill
-\subsection{Grafo Bipartido}
-\raggedbottom\lstinputlisting[style=cpp]{code/Grafo_Bipartido.cpp}
-\hrulefill
-\subsection{dsu}
-\raggedbottom\lstinputlisting[style=cpp]{code/dsu.cpp}
-\hrulefill
-\subsection{link cut tree edge}
-\raggedbottom\lstinputlisting[style=cpp]{code/link_cut_tree_edge.cpp}
-\hrulefill
-\subsection{block-cut-tree}
-\raggedbottom\lstinputlisting[style=cpp]{code/block-cut-tree.cpp}
-\hrulefill
-\subsection{reroot}
-\raggedbottom\lstinputlisting[style=cpp]{code/reroot.cpp}
-\hrulefill
-\subsection{hld edge}
-\raggedbottom\lstinputlisting[style=cpp]{code/hld_edge.cpp}
-\hrulefill
-\subsection{two sat}
-\raggedbottom\lstinputlisting[style=cpp]{code/two_sat.cpp}
-\hrulefill
-\subsection{hungarian}
-\raggedbottom\lstinputlisting[style=cpp]{code/hungarian.cpp}
-\hrulefill
-\subsection{dinic}
-\raggedbottom\lstinputlisting[style=cpp]{code/dinic.cpp}
-\hrulefill
-\subsection{hopcroft karp}
-\raggedbottom\lstinputlisting[style=cpp]{code/hopcroft_karp.cpp}
-\hrulefill
-\subsection{dsu rollback}
-\raggedbottom\lstinputlisting[style=cpp]{code/dsu_rollback.cpp}
-\hrulefill
-\subsection{MatrixDijkstra}
-\raggedbottom\lstinputlisting[style=cpp]{code/MatrixDijkstra.cpp}
-\hrulefill
-\subsection{sack}
-\raggedbottom\lstinputlisting[style=cpp]{code/sack.cpp}
-\hrulefill
-\subsection{bridges}
-\raggedbottom\lstinputlisting[style=cpp]{code/bridges.cpp}
-\hrulefill
-\subsection{Ford Fulkerson}
-\raggedbottom\lstinputlisting[style=cpp]{code/Ford_Fulkerson.cpp}
-\hrulefill
-\subsection{bipartite}
-\raggedbottom\lstinputlisting[style=cpp]{code/bipartite.cpp}
-\hrulefill
-\subsection{caminhoeuleriano}
-\raggedbottom\lstinputlisting[style=cpp]{code/caminhoeuleriano.cpp}
-\hrulefill
-\subsection{mo trees}
-\raggedbottom\lstinputlisting[style=cpp]{code/mo_trees.cpp}
-\hrulefill
-\subsection{LCA}
-\raggedbottom\lstinputlisting[style=cpp]{code/LCA.cpp}
-\hrulefill
-\subsection{Topological Sort}
-\raggedbottom\lstinputlisting[style=cpp]{code/Topological_Sort.cpp}
-\hrulefill
-\subsection{Dijkstra}
-\raggedbottom\lstinputlisting[style=cpp]{code/Dijkstra.cpp}
-\hrulefill
-\subsection{centroid decomposition}
-\raggedbottom\lstinputlisting[style=cpp]{code/centroid_decomposition.cpp}
-\hrulefill
-\subsection{DFS}
-\raggedbottom\lstinputlisting[style=cpp]{code/DFS.cpp}
-\hrulefill
-\subsection{erdos gallai}
-\raggedbottom\lstinputlisting[style=cpp]{code/erdos_gallai.cpp}
-\hrulefill
-\subsection{stable matching}
-\raggedbottom\lstinputlisting[style=cpp]{code/stable_matching.cpp}
-\hrulefill
-\subsection{cycle detection}
-\raggedbottom\lstinputlisting[style=cpp]{code/cycle_detection.cpp}
-\hrulefill
-\subsection{Kruskal}
-\raggedbottom\lstinputlisting[style=cpp]{code/Kruskal.cpp}
-\hrulefill
-\subsection{BFS}
-\raggedbottom\lstinputlisting[style=cpp]{code/BFS.cpp}
-\hrulefill
-
-\section{Strings}
-\subsection{suffix automaton}
-\raggedbottom\lstinputlisting[style=cpp]{code/suffix_automaton.cpp}
-\hrulefill
-\subsection{suffix array}
-\raggedbottom\lstinputlisting[style=cpp]{code/suffix_array.cpp}
-\hrulefill
-\subsection{kmp}
-\raggedbottom\lstinputlisting[style=cpp]{code/kmp.cpp}
-\hrulefill
-\subsection{aho corasick}
-\raggedbottom\lstinputlisting[style=cpp]{code/aho_corasick.cpp}
-\hrulefill
-\subsection{stringhashing2}
-\raggedbottom\lstinputlisting[style=cpp]{code/stringhashing2.cpp}
-\hrulefill
-\subsection{substring fft}
-\raggedbottom\lstinputlisting[style=cpp]{code/substring_fft.cpp}
-\hrulefill
-\subsection{min suffix}
-\raggedbottom\lstinputlisting[style=cpp]{code/min_suffix.cpp}
-\hrulefill
-\subsection{z-function}
-\raggedbottom\lstinputlisting[style=cpp]{code/z-function.cpp}
-\hrulefill
-\subsection{rabin-karp}
-\raggedbottom\lstinputlisting[style=cpp]{code/rabin-karp.cpp}
-\hrulefill
-\subsection{manacher}
-\raggedbottom\lstinputlisting[style=cpp]{code/manacher.cpp}
-\hrulefill
-\subsection{de bruijin}
-\raggedbottom\lstinputlisting[style=cpp]{code/de_bruijin.cpp}
-\hrulefill
-\subsection{stringhashing}
-\raggedbottom\lstinputlisting[style=cpp]{code/stringhashing.cpp}
-\hrulefill
-
 \section{Geometry}
-\subsection{dynamic ch}
-\raggedbottom\lstinputlisting[style=cpp]{code/dynamic_ch.cpp}
+\subsection{polygon isomorfism}
+\raggedbottom\lstinputlisting[style=cpp]{code/polygon_isomorfism.cpp}
+\hrulefill
+\subsection{LineSweep}
+\raggedbottom\lstinputlisting[style=cpp]{code/LineSweep.cpp}
+\hrulefill
+\subsection{convex hull point location}
+\raggedbottom\lstinputlisting[style=cpp]{code/convex_hull_point_location.cpp}
+\hrulefill
+\subsection{polygons distance}
+\raggedbottom\lstinputlisting[style=cpp]{code/polygons_distance.cpp}
 \hrulefill
 \subsection{smallest enclosing circle}
 \raggedbottom\lstinputlisting[style=cpp]{code/smallest_enclosing_circle.cpp}
 \hrulefill
-\subsection{polygon area}
-\raggedbottom\lstinputlisting[style=cpp]{code/polygon_area.cpp}
+\subsection{kd tree}
+\raggedbottom\lstinputlisting[style=cpp]{code/kd_tree.cpp}
 \hrulefill
 \subsection{ConvexHull}
 \raggedbottom\lstinputlisting[style=cpp]{code/ConvexHull.cpp}
+\hrulefill
+\subsection{dynamic ch}
+\raggedbottom\lstinputlisting[style=cpp]{code/dynamic_ch.cpp}
+\hrulefill
+\subsection{polygon area}
+\raggedbottom\lstinputlisting[style=cpp]{code/polygon_area.cpp}
+\hrulefill
+\subsection{points and vectors}
+\raggedbottom\lstinputlisting[style=cpp]{code/points_and_vectors.cpp}
 \hrulefill
 \subsection{minkowski}
 \raggedbottom\lstinputlisting[style=cpp]{code/minkowski.cpp}
@@ -431,67 +35,305 @@
 \subsection{halfplane intersection}
 \raggedbottom\lstinputlisting[style=cpp]{code/halfplane_intersection.cpp}
 \hrulefill
-\subsection{LineSweep}
-\raggedbottom\lstinputlisting[style=cpp]{code/LineSweep.cpp}
+
+\section{Strings}
+\subsection{min suffix}
+\raggedbottom\lstinputlisting[style=cpp]{code/min_suffix.cpp}
 \hrulefill
-\subsection{kd tree}
-\raggedbottom\lstinputlisting[style=cpp]{code/kd_tree.cpp}
+\subsection{manacher}
+\raggedbottom\lstinputlisting[style=cpp]{code/manacher.cpp}
 \hrulefill
-\subsection{points and vectors}
-\raggedbottom\lstinputlisting[style=cpp]{code/points_and_vectors.cpp}
+\subsection{de bruijin}
+\raggedbottom\lstinputlisting[style=cpp]{code/de_bruijin.cpp}
+\hrulefill
+\subsection{stringhashing2}
+\raggedbottom\lstinputlisting[style=cpp]{code/stringhashing2.cpp}
+\hrulefill
+\subsection{aho corasick}
+\raggedbottom\lstinputlisting[style=cpp]{code/aho_corasick.cpp}
+\hrulefill
+\subsection{z-function}
+\raggedbottom\lstinputlisting[style=cpp]{code/z-function.cpp}
+\hrulefill
+\subsection{substring fft}
+\raggedbottom\lstinputlisting[style=cpp]{code/substring_fft.cpp}
+\hrulefill
+\subsection{suffix array}
+\raggedbottom\lstinputlisting[style=cpp]{code/suffix_array.cpp}
+\hrulefill
+\subsection{stringhashing}
+\raggedbottom\lstinputlisting[style=cpp]{code/stringhashing.cpp}
+\hrulefill
+\subsection{suffix automaton}
+\raggedbottom\lstinputlisting[style=cpp]{code/suffix_automaton.cpp}
+\hrulefill
+\subsection{kmp}
+\raggedbottom\lstinputlisting[style=cpp]{code/kmp.cpp}
+\hrulefill
+\subsection{rabin-karp}
+\raggedbottom\lstinputlisting[style=cpp]{code/rabin-karp.cpp}
+\hrulefill
+
+\section{Binary Search and Ternary Search}
+\subsection{parallel binary search}
+\raggedbottom\lstinputlisting[style=cpp]{code/parallel_binary_search.cpp}
+\hrulefill
+\subsection{Aplications}
+\raggedbottom\lstinputlisting[style=cpp]{code/Aplications.cpp}
+\hrulefill
+\subsection{UpperBound}
+\raggedbottom\lstinputlisting[style=cpp]{code/UpperBound.cpp}
+\hrulefill
+\subsection{STL}
+\raggedbottom\lstinputlisting[style=cpp]{code/STL.cpp}
+\hrulefill
+\subsection{TS}
+\raggedbottom\lstinputlisting[style=cpp]{code/TS.cpp}
+\hrulefill
+\subsection{BS}
+\raggedbottom\lstinputlisting[style=cpp]{code/BS.cpp}
+\hrulefill
+\subsection{LowerBound}
+\raggedbottom\lstinputlisting[style=cpp]{code/LowerBound.cpp}
+\hrulefill
+
+\section{Graph}
+\subsection{Floyd Warshall}
+\raggedbottom\lstinputlisting[style=cpp]{code/Floyd_Warshall.cpp}
+\hrulefill
+\subsection{reroot}
+\raggedbottom\lstinputlisting[style=cpp]{code/reroot.cpp}
+\hrulefill
+\subsection{Ford Fulkerson}
+\raggedbottom\lstinputlisting[style=cpp]{code/Ford_Fulkerson.cpp}
+\hrulefill
+\subsection{stable matching}
+\raggedbottom\lstinputlisting[style=cpp]{code/stable_matching.cpp}
+\hrulefill
+\subsection{bridges}
+\raggedbottom\lstinputlisting[style=cpp]{code/bridges.cpp}
+\hrulefill
+\subsection{mincostflow}
+\raggedbottom\lstinputlisting[style=cpp]{code/mincostflow.cpp}
+\hrulefill
+\subsection{link cut tree vertex}
+\raggedbottom\lstinputlisting[style=cpp]{code/link_cut_tree_vertex.cpp}
+\hrulefill
+\subsection{strong orientation}
+\raggedbottom\lstinputlisting[style=cpp]{code/strong_orientation.cpp}
+\hrulefill
+\subsection{centroid decomposition2}
+\raggedbottom\lstinputlisting[style=cpp]{code/centroid_decomposition2.cpp}
+\hrulefill
+\subsection{LCA}
+\raggedbottom\lstinputlisting[style=cpp]{code/LCA.cpp}
+\hrulefill
+\subsection{dsu rollback}
+\raggedbottom\lstinputlisting[style=cpp]{code/dsu_rollback.cpp}
+\hrulefill
+\subsection{sack}
+\raggedbottom\lstinputlisting[style=cpp]{code/sack.cpp}
+\hrulefill
+\subsection{two sat}
+\raggedbottom\lstinputlisting[style=cpp]{code/two_sat.cpp}
+\hrulefill
+\subsection{Dijkstra}
+\raggedbottom\lstinputlisting[style=cpp]{code/Dijkstra.cpp}
+\hrulefill
+\subsection{scc}
+\raggedbottom\lstinputlisting[style=cpp]{code/scc.cpp}
+\hrulefill
+\subsection{dominator tree}
+\raggedbottom\lstinputlisting[style=cpp]{code/dominator_tree.cpp}
+\hrulefill
+\subsection{flow with minimum capacities}
+\raggedbottom\lstinputlisting[style=cpp]{code/flow_with_minimum_capacities.cpp}
+\hrulefill
+\subsection{centroid decomposition}
+\raggedbottom\lstinputlisting[style=cpp]{code/centroid_decomposition.cpp}
+\hrulefill
+\subsection{TreeDiameter}
+\raggedbottom\lstinputlisting[style=cpp]{code/TreeDiameter.cpp}
+\hrulefill
+\subsection{virtual tree}
+\raggedbottom\lstinputlisting[style=cpp]{code/virtual_tree.cpp}
+\hrulefill
+\subsection{dinic}
+\raggedbottom\lstinputlisting[style=cpp]{code/dinic.cpp}
+\hrulefill
+\subsection{hall theorem}
+\raggedbottom\lstinputlisting[style=cpp]{code/hall_theorem.cpp}
+\hrulefill
+\subsection{Kruskal}
+\raggedbottom\lstinputlisting[style=cpp]{code/Kruskal.cpp}
+\hrulefill
+\subsection{hungarian}
+\raggedbottom\lstinputlisting[style=cpp]{code/hungarian.cpp}
+\hrulefill
+\subsection{BFS}
+\raggedbottom\lstinputlisting[style=cpp]{code/BFS.cpp}
+\hrulefill
+\subsection{hld edge}
+\raggedbottom\lstinputlisting[style=cpp]{code/hld_edge.cpp}
+\hrulefill
+\subsection{dsu}
+\raggedbottom\lstinputlisting[style=cpp]{code/dsu.cpp}
+\hrulefill
+\subsection{MatrixDijkstra}
+\raggedbottom\lstinputlisting[style=cpp]{code/MatrixDijkstra.cpp}
+\hrulefill
+\subsection{articulation points}
+\raggedbottom\lstinputlisting[style=cpp]{code/articulation_points.cpp}
+\hrulefill
+\subsection{link cut tree edge}
+\raggedbottom\lstinputlisting[style=cpp]{code/link_cut_tree_edge.cpp}
+\hrulefill
+\subsection{hopcroft karp}
+\raggedbottom\lstinputlisting[style=cpp]{code/hopcroft_karp.cpp}
+\hrulefill
+\subsection{cycle detection}
+\raggedbottom\lstinputlisting[style=cpp]{code/cycle_detection.cpp}
+\hrulefill
+\subsection{eulertour}
+\raggedbottom\lstinputlisting[style=cpp]{code/eulertour.cpp}
+\hrulefill
+\subsection{bipartite}
+\raggedbottom\lstinputlisting[style=cpp]{code/bipartite.cpp}
+\hrulefill
+\subsection{mo dsu}
+\raggedbottom\lstinputlisting[style=cpp]{code/mo_dsu.cpp}
+\hrulefill
+\subsection{Prim}
+\raggedbottom\lstinputlisting[style=cpp]{code/Prim.cpp}
+\hrulefill
+\subsection{tree isomorfism}
+\raggedbottom\lstinputlisting[style=cpp]{code/tree_isomorfism.cpp}
+\hrulefill
+\subsection{caminhoeuleriano}
+\raggedbottom\lstinputlisting[style=cpp]{code/caminhoeuleriano.cpp}
+\hrulefill
+\subsection{hld}
+\raggedbottom\lstinputlisting[style=cpp]{code/hld.cpp}
+\hrulefill
+\subsection{caminhoeuleriano2}
+\raggedbottom\lstinputlisting[style=cpp]{code/caminhoeuleriano2.cpp}
+\hrulefill
+\subsection{DFS}
+\raggedbottom\lstinputlisting[style=cpp]{code/DFS.cpp}
+\hrulefill
+\subsection{block-cut-tree}
+\raggedbottom\lstinputlisting[style=cpp]{code/block-cut-tree.cpp}
+\hrulefill
+\subsection{mo trees edges}
+\raggedbottom\lstinputlisting[style=cpp]{code/mo_trees_edges.cpp}
+\hrulefill
+\subsection{mo trees}
+\raggedbottom\lstinputlisting[style=cpp]{code/mo_trees.cpp}
+\hrulefill
+\subsection{erdos gallai}
+\raggedbottom\lstinputlisting[style=cpp]{code/erdos_gallai.cpp}
+\hrulefill
+\subsection{rmq tree}
+\raggedbottom\lstinputlisting[style=cpp]{code/rmq_tree.cpp}
+\hrulefill
+\subsection{Topological Sort}
+\raggedbottom\lstinputlisting[style=cpp]{code/Topological_Sort.cpp}
+\hrulefill
+\subsection{Grafo Bipartido}
+\raggedbottom\lstinputlisting[style=cpp]{code/Grafo_Bipartido.cpp}
+\hrulefill
+
+\section{Miscellaneous}
+\subsection{inversion count}
+\raggedbottom\lstinputlisting[style=cpp]{code/inversion_count.cpp}
+\hrulefill
+\subsection{two pointers}
+\raggedbottom\lstinputlisting[style=cpp]{code/two_pointers.cpp}
+\hrulefill
+\subsection{bitmasks}
+\raggedbottom\lstinputlisting[style=cpp]{code/bitmasks.cpp}
+\hrulefill
+\subsection{sprague grundy}
+\raggedbottom\lstinputlisting[style=cpp]{code/sprague_grundy.cpp}
+\hrulefill
+\subsection{coordinate compression}
+\raggedbottom\lstinputlisting[style=cpp]{code/coordinate_compression.cpp}
+\hrulefill
+\subsection{meetinthemiddle}
+\raggedbottom\lstinputlisting[style=cpp]{code/meetinthemiddle.cpp}
+\hrulefill
+\subsection{segment covering}
+\raggedbottom\lstinputlisting[style=cpp]{code/segment_covering.cpp}
+\hrulefill
+\subsection{sum hash}
+\raggedbottom\lstinputlisting[style=cpp]{code/sum_hash.cpp}
+\hrulefill
+\subsection{tower of hanoi}
+\raggedbottom\lstinputlisting[style=cpp]{code/tower_of_hanoi.cpp}
+\hrulefill
+\subsection{prefix sum 2d}
+\raggedbottom\lstinputlisting[style=cpp]{code/prefix_sum_2d.cpp}
+\hrulefill
+\subsection{stack trick}
+\raggedbottom\lstinputlisting[style=cpp]{code/stack_trick.cpp}
+\hrulefill
+
+\section{Theorems and Formulas}
+\subsection{binomial theorem}
+\raggedbottom\lstinputlisting[style=txt]{code/binomial_theorem.md}
+\hrulefill
+\subsection{chicken mcnugget}
+\raggedbottom\lstinputlisting[style=txt]{code/chicken_mcnugget.md}
+\hrulefill
+\subsection{graph notes}
+\raggedbottom\lstinputlisting[style=txt]{code/graph_notes.md}
 \hrulefill
 
 \section{Structures}
-\subsection{persistent seg}
-\raggedbottom\lstinputlisting[style=cpp]{code/persistent_seg.cpp}
+\subsection{lower bound segtree}
+\raggedbottom\lstinputlisting[style=cpp]{code/lower_bound_segtree.cpp}
 \hrulefill
-\subsection{treap}
-\raggedbottom\lstinputlisting[style=cpp]{code/treap.cpp}
-\hrulefill
-\subsection{segtree2d}
-\raggedbottom\lstinputlisting[style=cpp]{code/segtree2d.cpp}
-\hrulefill
-\subsection{mo update}
-\raggedbottom\lstinputlisting[style=cpp]{code/mo_update.cpp}
-\hrulefill
-\subsection{mergesorttree}
-\raggedbottom\lstinputlisting[style=cpp]{code/mergesorttree.cpp}
-\hrulefill
-\subsection{sparsetable}
-\raggedbottom\lstinputlisting[style=cpp]{code/sparsetable.cpp}
-\hrulefill
-\subsection{implicit seg}
-\raggedbottom\lstinputlisting[style=cpp]{code/implicit_seg.cpp}
-\hrulefill
-\subsection{min queue}
-\raggedbottom\lstinputlisting[style=cpp]{code/min_queue.cpp}
+\subsection{Segtree2}
+\raggedbottom\lstinputlisting[style=cpp]{code/Segtree2.cpp}
 \hrulefill
 \subsection{SegTree pa}
 \raggedbottom\lstinputlisting[style=cpp]{code/SegTree_pa.cpp}
 \hrulefill
-\subsection{segtree lazy}
-\raggedbottom\lstinputlisting[style=cpp]{code/segtree_lazy.cpp}
+\subsection{min queue}
+\raggedbottom\lstinputlisting[style=cpp]{code/min_queue.cpp}
 \hrulefill
-\subsection{segtree max seg sum}
-\raggedbottom\lstinputlisting[style=cpp]{code/segtree_max_seg_sum.cpp}
-\hrulefill
-\subsection{fenwick3}
-\raggedbottom\lstinputlisting[style=cpp]{code/fenwick3.cpp}
+\subsection{mo update}
+\raggedbottom\lstinputlisting[style=cpp]{code/mo_update.cpp}
 \hrulefill
 \subsection{treap2}
 \raggedbottom\lstinputlisting[style=cpp]{code/treap2.cpp}
 \hrulefill
-\subsection{persistent seg2}
-\raggedbottom\lstinputlisting[style=cpp]{code/persistent_seg2.cpp}
+\subsection{segtree lazy}
+\raggedbottom\lstinputlisting[style=cpp]{code/segtree_lazy.cpp}
 \hrulefill
 \subsection{SegTree}
 \raggedbottom\lstinputlisting[style=cpp]{code/SegTree.cpp}
 \hrulefill
-\subsection{binary lifting}
-\raggedbottom\lstinputlisting[style=cpp]{code/binary_lifting.cpp}
+\subsection{fenwick2D}
+\raggedbottom\lstinputlisting[style=cpp]{code/fenwick2D.cpp}
 \hrulefill
-\subsection{Segtree2}
-\raggedbottom\lstinputlisting[style=cpp]{code/Segtree2.cpp}
+\subsection{mergesorttree}
+\raggedbottom\lstinputlisting[style=cpp]{code/mergesorttree.cpp}
+\hrulefill
+\subsection{treap}
+\raggedbottom\lstinputlisting[style=cpp]{code/treap.cpp}
+\hrulefill
+\subsection{bit2d}
+\raggedbottom\lstinputlisting[style=cpp]{code/bit2d.cpp}
+\hrulefill
+\subsection{fenwick3}
+\raggedbottom\lstinputlisting[style=cpp]{code/fenwick3.cpp}
+\hrulefill
+\subsection{segtree2d}
+\raggedbottom\lstinputlisting[style=cpp]{code/segtree2d.cpp}
+\hrulefill
+\subsection{persistent seg2}
+\raggedbottom\lstinputlisting[style=cpp]{code/persistent_seg2.cpp}
 \hrulefill
 \subsection{rmq}
 \raggedbottom\lstinputlisting[style=cpp]{code/rmq.cpp}
@@ -499,8 +341,14 @@
 \subsection{color update}
 \raggedbottom\lstinputlisting[style=cpp]{code/color_update.cpp}
 \hrulefill
-\subsection{bit2d}
-\raggedbottom\lstinputlisting[style=cpp]{code/bit2d.cpp}
+\subsection{segtree max seg sum}
+\raggedbottom\lstinputlisting[style=cpp]{code/segtree_max_seg_sum.cpp}
+\hrulefill
+\subsection{fenwick}
+\raggedbottom\lstinputlisting[style=cpp]{code/fenwick.cpp}
+\hrulefill
+\subsection{implicit seg}
+\raggedbottom\lstinputlisting[style=cpp]{code/implicit_seg.cpp}
 \hrulefill
 \subsection{fenwick2}
 \raggedbottom\lstinputlisting[style=cpp]{code/fenwick2.cpp}
@@ -508,10 +356,204 @@
 \subsection{mo}
 \raggedbottom\lstinputlisting[style=cpp]{code/mo.cpp}
 \hrulefill
-\subsection{bit2D}
-\raggedbottom\lstinputlisting[style=cpp]{code/bit2D.cpp}
+\subsection{persistent seg}
+\raggedbottom\lstinputlisting[style=cpp]{code/persistent_seg.cpp}
 \hrulefill
-\subsection{fenwick}
-\raggedbottom\lstinputlisting[style=cpp]{code/fenwick.cpp}
+\subsection{binary lifting}
+\raggedbottom\lstinputlisting[style=cpp]{code/binary_lifting.cpp}
+\hrulefill
+\subsection{sparsetable}
+\raggedbottom\lstinputlisting[style=cpp]{code/sparsetable.cpp}
+\hrulefill
+
+\section{Utils}
+\subsection{execution time}
+\raggedbottom\lstinputlisting[style=cpp]{code/execution_time.cpp}
+\hrulefill
+\subsection{runner}
+\raggedbottom\lstinputlisting[style=py]{code/runner.py}
+\hrulefill
+\subsection{  int128}
+\raggedbottom\lstinputlisting[style=cpp]{code/__int128.cpp}
+\hrulefill
+\subsection{runner2}
+\raggedbottom\lstinputlisting[style=py]{code/runner2.py}
+\hrulefill
+\subsection{rand}
+\raggedbottom\lstinputlisting[style=cpp]{code/rand.cpp}
+\hrulefill
+
+\section{Dynamic programming and common problems}
+\subsection{divideandconquer}
+\raggedbottom\lstinputlisting[style=cpp]{code/divideandconquer.cpp}
+\hrulefill
+\subsection{suffix sum}
+\raggedbottom\lstinputlisting[style=cpp]{code/suffix_sum.cpp}
+\hrulefill
+\subsection{steiner tree}
+\raggedbottom\lstinputlisting[style=cpp]{code/steiner_tree.cpp}
+\hrulefill
+\subsection{lcs}
+\raggedbottom\lstinputlisting[style=cpp]{code/lcs.cpp}
+\hrulefill
+\subsection{bitwise digit dp}
+\raggedbottom\lstinputlisting[style=cpp]{code/bitwise_digit_dp.cpp}
+\hrulefill
+\subsection{aliens trick}
+\raggedbottom\lstinputlisting[style=cpp]{code/aliens_trick.cpp}
+\hrulefill
+\subsection{Digitdp}
+\raggedbottom\lstinputlisting[style=cpp]{code/Digitdp.cpp}
+\hrulefill
+\subsection{broken profile}
+\raggedbottom\lstinputlisting[style=cpp]{code/broken_profile.cpp}
+\hrulefill
+\subsection{largest square}
+\raggedbottom\lstinputlisting[style=cpp]{code/largest_square.cpp}
+\hrulefill
+\subsection{max matrix path}
+\raggedbottom\lstinputlisting[style=cpp]{code/max_matrix_path.cpp}
+\hrulefill
+\subsection{largest-sum-contiguous-subarray}
+\raggedbottom\lstinputlisting[style=cpp]{code/largest-sum-contiguous-subarray.cpp}
+\hrulefill
+\subsection{exchange arguments}
+\raggedbottom\lstinputlisting[style=cpp]{code/exchange_arguments.cpp}
+\hrulefill
+\subsection{tip}
+\raggedbottom\lstinputlisting[style=cpp]{code/tip.cpp}
+\hrulefill
+\subsection{Knapsack}
+\raggedbottom\lstinputlisting[style=cpp]{code/Knapsack.cpp}
+\hrulefill
+\subsection{subsequences string}
+\raggedbottom\lstinputlisting[style=cpp]{code/subsequences_string.cpp}
+\hrulefill
+\subsection{dynamic cht}
+\raggedbottom\lstinputlisting[style=cpp]{code/dynamic_cht.cpp}
+\hrulefill
+\subsection{lis}
+\raggedbottom\lstinputlisting[style=cpp]{code/lis.cpp}
+\hrulefill
+\subsection{lichao}
+\raggedbottom\lstinputlisting[style=cpp]{code/lichao.cpp}
+\hrulefill
+\subsection{expected value}
+\raggedbottom\lstinputlisting[style=cpp]{code/expected_value.cpp}
+\hrulefill
+\subsection{subset sum}
+\raggedbottom\lstinputlisting[style=cpp]{code/subset_sum.cpp}
+\hrulefill
+\subsection{sos dp}
+\raggedbottom\lstinputlisting[style=cpp]{code/sos_dp.cpp}
+\hrulefill
+\subsection{cht}
+\raggedbottom\lstinputlisting[style=cpp]{code/cht.cpp}
+\hrulefill
+
+\section{STL}
+\subsection{STL}
+\raggedbottom\lstinputlisting[style=txt]{code/STL.txt}
+\hrulefill
+\subsection{ordered set}
+\raggedbottom\lstinputlisting[style=cpp]{code/ordered_set.cpp}
+\hrulefill
+
+\section{Math}
+\subsection{mobius2}
+\raggedbottom\lstinputlisting[style=cpp]{code/mobius2.cpp}
+\hrulefill
+\subsection{binomial theorem}
+\raggedbottom\lstinputlisting[style=cpp]{code/binomial_theorem.cpp}
+\hrulefill
+\subsection{diophantine}
+\raggedbottom\lstinputlisting[style=cpp]{code/diophantine.cpp}
+\hrulefill
+\subsection{primefactors}
+\raggedbottom\lstinputlisting[style=cpp]{code/primefactors.cpp}
+\hrulefill
+\subsection{xor trie}
+\raggedbottom\lstinputlisting[style=cpp]{code/xor_trie.cpp}
+\hrulefill
+\subsection{totient}
+\raggedbottom\lstinputlisting[style=cpp]{code/totient.cpp}
+\hrulefill
+\subsection{matrix inverse and determinant}
+\raggedbottom\lstinputlisting[style=cpp]{code/matrix_inverse_and_determinant.cpp}
+\hrulefill
+\subsection{gaussian elimination}
+\raggedbottom\lstinputlisting[style=cpp]{code/gaussian_elimination.cpp}
+\hrulefill
+\subsection{extended euclidean}
+\raggedbottom\lstinputlisting[style=cpp]{code/extended_euclidean.cpp}
+\hrulefill
+\subsection{primefactors2}
+\raggedbottom\lstinputlisting[style=cpp]{code/primefactors2.cpp}
+\hrulefill
+\subsection{catalan}
+\raggedbottom\lstinputlisting[style=cpp]{code/catalan.cpp}
+\hrulefill
+\subsection{berlekamp massey}
+\raggedbottom\lstinputlisting[style=cpp]{code/berlekamp_massey.cpp}
+\hrulefill
+\subsection{fraction}
+\raggedbottom\lstinputlisting[style=cpp]{code/fraction.cpp}
+\hrulefill
+\subsection{pollard rho}
+\raggedbottom\lstinputlisting[style=cpp]{code/pollard_rho.cpp}
+\hrulefill
+\subsection{baby step gigant step}
+\raggedbottom\lstinputlisting[style=cpp]{code/baby_step_gigant_step.cpp}
+\hrulefill
+\subsection{matrix exponentiation2}
+\raggedbottom\lstinputlisting[style=cpp]{code/matrix_exponentiation2.cpp}
+\hrulefill
+\subsection{simplex}
+\raggedbottom\lstinputlisting[style=cpp]{code/simplex.cpp}
+\hrulefill
+\subsection{lagrange}
+\raggedbottom\lstinputlisting[style=cpp]{code/lagrange.cpp}
+\hrulefill
+\subsection{crt}
+\raggedbottom\lstinputlisting[style=cpp]{code/crt.cpp}
+\hrulefill
+\subsection{fft}
+\raggedbottom\lstinputlisting[style=cpp]{code/fft.cpp}
+\hrulefill
+\subsection{segmentedsieve}
+\raggedbottom\lstinputlisting[style=cpp]{code/segmentedsieve.cpp}
+\hrulefill
+\subsection{gaussian elimination2}
+\raggedbottom\lstinputlisting[style=cpp]{code/gaussian_elimination2.cpp}
+\hrulefill
+\subsection{stars and bars}
+\raggedbottom\lstinputlisting[style=cpp]{code/stars_and_bars.cpp}
+\hrulefill
+\subsection{fwht}
+\raggedbottom\lstinputlisting[style=cpp]{code/fwht.cpp}
+\hrulefill
+\subsection{operadores binarios}
+\raggedbottom\lstinputlisting[style=cpp]{code/operadores_binarios.cpp}
+\hrulefill
+\subsection{matrix exponentiation}
+\raggedbottom\lstinputlisting[style=cpp]{code/matrix_exponentiation.cpp}
+\hrulefill
+\subsection{max xor subsequence}
+\raggedbottom\lstinputlisting[style=cpp]{code/max_xor_subsequence.cpp}
+\hrulefill
+\subsection{divisors}
+\raggedbottom\lstinputlisting[style=cpp]{code/divisors.cpp}
+\hrulefill
+\subsection{ntt}
+\raggedbottom\lstinputlisting[style=cpp]{code/ntt.cpp}
+\hrulefill
+\subsection{modular arithmetic}
+\raggedbottom\lstinputlisting[style=cpp]{code/modular_arithmetic.cpp}
+\hrulefill
+\subsection{crivo}
+\raggedbottom\lstinputlisting[style=cpp]{code/crivo.cpp}
+\hrulefill
+\subsection{mobius}
+\raggedbottom\lstinputlisting[style=cpp]{code/mobius.cpp}
 \hrulefill
 
