--- a/Notebook (based on the stanfordacm script)/notebook.tex
+++ b/Notebook (based on the stanfordacm script)/notebook.tex
@@ -53,18 +53,18 @@
 \lstset{escapechar=@}
 
 \pagestyle{fancy}
-\fancyhead[L]{Geração EAD Coda y Coda}
+\fancyhead[L]{Floyd (WA)rshall}
 \fancyhead[R]{\thepage}
 \fancyfoot[C]{}
 
 \fancypagestyle{plain}
 {
-\fancyhead[L]{Geração EAD Coda y Coda}
+\fancyhead[L]{Floyd (WA)rshall}
 \fancyhead[R]{\thepage}
 \fancyfoot[C]{}
 }
 
-\title{\vspace{-4ex}\Large{Geração EAD Coda y Coda}}
+\title{\vspace{-4ex}\Large{Floyd (WA)rshall}}
 \author{}
 \date{}
 
